--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -17,6 +17,8 @@
         <th>{{product.type}}</th>
         <th>{{product.color}}</th>
         <th>{{product.price|currency}}</th>
+        <th><a [routerLink]="['/products','edit',product.id]">Edit</a></th>
+        <th><a [routerLink]="[]" (click)="deleteProduct(product.id)">Delete</a></th>
       </tr>   
     </tbody>
   </table>
